--- a/listatelefonica/index.html
+++ b/listatelefonica/index.html
@@ -1,5 +1,6 @@
 <html ng-app="listaTelefonica">
 <head>
+	<meta charset="UTF-8">
 	<title>Lista Telefonica</title>
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
 	<style>
@@ -24,8 +25,10 @@
 		}
 	</style>
 	<script src="lib/angular/angular.js"></script>
-	<script>
-		angular.module("listaTelefonica", []);
+	<script src="lib/angular/angular-messages.js"></script>
+
+	<script>		
+		angular.module("listaTelefonica", ["ngMessages"]);
 		angular.module("listaTelefonica").controller("listaTelefonicaCtrl", function ($scope) {
 			$scope.app = "Lista Telefonica";
 			$scope.contatos = [
@@ -43,6 +46,7 @@
 			$scope.adicionarContato = function (contato) {
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
+				$scope.contatoForm.$setPristine();
 			};
 			$scope.apagarContatos = function (contatos) {
 				$scope.contatos = contatos.filter(function (contato) {
@@ -77,12 +81,33 @@
 			</tr>
 		</table>
 		<hr/>
-		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome"/>
-		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone"/>
+		<form name="contatoForm">
+		<input class="form-control" type="text" name="nome" ng-model="contato.nome" placeholder="Nome" ng-required="true" ng-minlength="10"/>
+		<input class="form-control" type="text" name="telefone" ng-model="contato.telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/"/>
 		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome for operadora in operadoras">
 			<option value="">Selecione uma operadora</option>
 		</select>
-		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
+		</form>
+		<div ng-messages="contatoForm.nome.$error" class="alert alert-danger">
+
+		<div ng-message="required">
+			Por favor, preencha o nome!
+ 
+		</div>
+		<div ng-message="minlength">
+			O campo nome deve ter no minimo 10 caracteres.
+ 
+		</div>
+		</div>
+		<div class="alert alert-danger" ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty">
+			Por favor preencha o telefone
+ 
+		</div>
+		<div class="alert alert-danger" ng-show="contatoForm.telefone.$error.pattern">
+			O campo telefone deve ter o formato xxxxx-xxxx
+ 
+		</div>
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
 		<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
 	</div>
 	<div ng-include="'footer.html'"></div>
